# CompressImage

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wellee/compressimage/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compress_image.cpp  compress_image.h
app/src/main/cpp/jpeg/: jconfigint.h
app/src/main/java/com/wellee/compressimage/: ImageUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wellee/compressimage/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
